--- a/now.json
+++ b/now.json
@@ -1,6 +1,9 @@
 {
     "version": 2,
     "name": "disqusjs-proxy",
+     "alias": [
+        "disqus.xunbug.com"
+    ],
     "routes": [
         {
             "src": "/(.*)",
